# tech_leader

./: .env  .env.local  .gitignore  CHANGELOG.md  PATCH_APPLICATION_SUMMARY.md  README.md  compare_patch.py  counts.txt  diff_output.txt  generate_report.py  output.txt  package-lock.json  package.json  results.md  tsconfig.json  tsconfig.tsbuildinfo  verify_output.txt
.codenomad_core/: sessions.jsonl
.github/: copilot-instructions.md
app/: globals.css  layout.tsx  page.tsx
backend/: agentic_creative.db  requirements.txt
backend/services/architecture-observer/: pyproject.toml
backend/services/architecture-observer/architecture_observer/: models.py
backend/services/architecture-observer/architecture_observer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
components/: BrainShell.tsx
context_graph/: edges.jsonl  risk_signals.json
design_to_video_real_runtime_patch_v2/: README.md  README_REAL_RUNTIME_PATCH.md
docs/: 02_CLOSED_LOOP_WORKFLOW.md  03_API_CONTRACTS.md  04_DATABASE_SCHEMA.md  08_FILE_BY_FILE_PATCH_PLAN.md  APPLY_GUIDE.md  ARCHITECTURE.md  BRD.md  CREATIVE_OS_ARCHITECTURE.md  DEV_PATCH_GUIDE.md  MAIN_TSX_MOUNT_SNIPPET.md  MULTI_AGENT_WORKFORCE_PATCH.md  PATCH_REPORT.md  README_PATCH.md  RENDER_SAFETY_RULES.md  SCENEMA_AUDIO_VOICE_CLONING_UPGRADE.md  TECHLEAD_AUDIT_REPORT.json  V30_STORYBOARD_AGENT_LFW_RUNTIME.md  VIDEOFLOW_TECH_LEADER_UPGRADE.md  master-plan.md
examples/: v30_sales_lipstick_runway.json
frontend/: index.html  package.json
lib/: brand-memory.ts  fashion-runtime-api.ts  logger.ts  movie-os-v3-api.ts  observability.ts
(+1413 files in other folders)
